Refactor templates for improved UI and functionality
- Updated base.html to enhance navigation with a logo and user authentication buttons.
- Modified browse_sale.html to change "Price" to "Amount" and handle empty sales list.
- Enhanced create_sale.html with better form structure and error/success messages.
- Revamped home.html with a new jumbotron design and call-to-action buttons.
- Improved login_and_register.html to display error messages for login and registration.
- Created a new register.html template for a dedicated registration form.

--- a/Report2.tex
+++ b/Report2.tex
@@ -1,7 +1,7 @@
 % Compile this document with XeLaTeX to use the Poppins font
 \documentclass[12pt]{article}
-\usepackage{fontspec}                   % For custom fonts
-\setmainfont{Poppins}                   % Set Poppins as main font
+%\usepackage{fontspec}                   % For custom fonts
+%\setmainfont{Poppins}                   % Set Poppins as main font
 \usepackage{geometry}                   % Page margins
 \geometry{margin=1in}
 \usepackage{hyperref}
