--- a/Report.tex
+++ b/Report.tex
@@ -1,8 +1,9 @@
+% !TeX root = Report.tex
 \documentclass[12pt]{article}
 \usepackage[margin=1in]{geometry}
 \usepackage{hyperref}
 \usepackage{amsmath}
-\title{Django Sales App Project Report}
+\title{Moneyworth Web App Project Report}
 \author{Group Members: Name1, Name2, Name3, Name4}
 \date{\today}
 
@@ -10,40 +11,105 @@
 \maketitle
 
 \section{Introduction}
-Provide an overview of your Django Sales App here. Discuss the purpose of the application and its main features. You might mention the key pages (Home, Dashboard, Browse Sales, etc.) and the goals of the project.
+Moneyworth is a web application designed to help users manage and browse sales listings. The main features include user authentication, a dashboard, browsing and creating sales, and profile management. The application provides a modern, responsive interface with a navigation bar, hero section on the Home page, and a footer on all pages. Key pages include Home, Dashboard, Browse Sales, Create Sale, About, and Contact.
 
 \section{Part a: HTML and Django Template Code Implementation}
-In this section, include your HTML and Django template code for the project layout.
+This section presents the HTML and Django template code used for the project layout.
 
 \subsection{Base Template Explanation}
-Explain the structure of your base template (e.g., navigation bar, hero/jumbotron section, footer). Discuss how you set up the content blocks that child templates will override.
+The base template, \texttt{base.html}, defines the overall structure of the site. It includes a navigation bar, a hero (jumbotron) section (on the Home page), and a footer. Content blocks are defined using Django's template block tags, allowing child templates to override specific sections.
+
+\begin{verbatim}
+<!-- templates/core/base.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Django Sales App{% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap-icons.min.css' %}">
+    {% block extra_head %}{% endblock %}
+</head>
+<body>
+    <nav>...navbar code...</nav>
+    {% block content %}{% endblock %}
+    <footer>...footer code...</footer>
+    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+</body>
+</html>
+\end{verbatim}
 
 \subsection{Child Template Example}
-Provide an example of a child template that extends the base template. For example, this could be the HTML for the Home or Browse Sales page. Show how it uses template blocks from the base template.
+A child template, such as \texttt{home.html}, extends the base template and fills in the content block:
+
+\begin{verbatim}
+<!-- templates/core/home.html -->
+{% extends 'core/base.html' %}
+{% block title %}Home - Django Sales App{% endblock %}
+{% block content %}
+<div class="jumbotron">
+    <h1>Welcome to the Django Sales App!</h1>
+    <p>Browse and manage sales listings easily.</p>
+</div>
+{% endblock %}
+\end{verbatim}
 
 \subsection{Use of Template Tags}
-Describe the Django template tags you used and their purpose. Examples include \verb|{% extends %}|, \verb|{% block %}|, and \verb|{% static %}|. Explain how each tag helps organize your templates.
+Key Django template tags used include:
+\begin{itemize}
+    \item \verb|{% extends %}|: Allows a template to inherit from a base template.
+    \item \verb|{% block %}|: Defines sections that child templates can override.
+    \item \verb|{% static %}|: Resolves the URL for static files (CSS, JS, images).
+\end{itemize}
+These tags help organize templates, promote code reuse, and simplify static file management.
 
 \subsection{Bonus: URL and View Structure}
-(Optional) Show how your \texttt{urls.py} and \texttt{views.py} relate to the templates above. Include any relevant snippets of URL patterns or view functions.
+The \texttt{urls.py} and \texttt{views.py} files connect URLs to views and templates. For example:
+
+\begin{verbatim}
+# core/urls.py
+from django.urls import path
+from . import views
+
+urlpatterns = [
+    path('', views.home, name='home'),
+    path('dashboard/', views.dashboard, name='dashboard'),
+    path('sales/', views.browse_sales, name='browse_sales'),
+    path('sales/create/', views.create_sale, name='create_sale'),
+    path('about/', views.about, name='about'),
+    path('contact/', views.contact, name='contact'),
+]
+
+# core/views.py
+from django.shortcuts import render
+
+def home(request):
+    return render(request, 'core/home.html')
+# ...other view functions...
+\end{verbatim}
 
 \section{Part b: Benefits of Django for Responsive Web Apps}
-Discuss why Django is beneficial for building responsive web applications. Mention Django’s template system (separation of concerns), integration with CSS frameworks (like Bootstrap), and built-in features (such as security and scalability).
+Django is ideal for building responsive web applications due to its template system, which separates logic from presentation. It integrates easily with CSS frameworks like Bootstrap, enabling mobile-friendly designs. Django also provides built-in security, scalability, and rapid development features, making it suitable for modern web apps.
 
 \section{Part c: Linking Static CSS and JavaScript in Django}
-Explain how to include static files (CSS, JavaScript) in your Django project:
+To include static files in Django:
 \begin{enumerate}
-    \item Configure \texttt{STATIC\_URL} in \texttt{settings.py}.
-    \item Use \verb|{% load static %}| at the top of your templates.
-    \item Reference static files with \verb|{% static 'path/to/filename.css' %}| in your HTML.
+    \item Set \texttt{STATIC\_URL} in \texttt{settings.py} (e.g., \texttt{STATIC\_URL = '/static/'}).
+    \item Add \verb|{% load static %}| at the top of each template.
+    \item Reference static files using \verb|{% static 'css/bootstrap.min.css' %}| or similar.
 \end{enumerate}
+Example:
+\begin{verbatim}
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+\end{verbatim}
 
 \section{Part d: Components of MTV Architecture in Django}
-Describe the Model-Template-View (MTV) components in Django:
+Django follows the Model-Template-View (MTV) architecture:
 \begin{itemize}
-    \item \textbf{Model:} Define its role in data management (e.g., in this project, Sales models handle product data).
-    \item \textbf{View:} Describe how views handle requests and generate responses (e.g., your view functions or classes for Home, Browse, etc.).
-    \item \textbf{Template:} Explain the role of templates in rendering HTML (e.g., the HTML files you created for each page).
+    \item \textbf{Model:} Defines data structure. E.g., the Sales model in \texttt{core/models.py} manages product data.
+    \item \textbf{View:} Handles requests and returns responses. E.g., functions in \texttt{core/views.py} render templates for each page.
+    \item \textbf{Template:} Renders HTML. E.g., files in \texttt{templates/core/} display content to users.
 \end{itemize}
 
 \end{document}
