Update sale status terminology and improve documentation: change 'closed' to 'completed', update related templates, and enhance report introduction.

--- a/Report.tex
+++ b/Report.tex
@@ -11,15 +11,19 @@
 \maketitle
 
 \section{Introduction}
-Moneyworth is a web application designed to help users manage and browse sales listings.
-The main features include user authentication, a dashboard, browsing and creating sales, 
-and profile management. The application provides a modern, 
-responsive interface with a navigation bar, 
+Moneyworth is a web application designed to help sale managers 
+create and track their sales listings.
+The main features include user authentication, a dashboard,
+browsing and creating sales. The application provides a 
+modern, responsive interface with a navigation bar, 
 hero section on the Home page, and a footer on all pages.
-Key pages include Home, Dashboard, Browse Sales, Create Sale, About, and Contact.
+Key pages include:
+ Home, Dashboard, Browse Sales, Create Sale,
+ About, and Contact.
 
 \section{Part a: HTML and Django Template Code Implementation}
-This section presents the HTML and Django template code used for the project layout.
+This section presents the HTML and Django template code used 
+for the project layout.
 
 \subsection{Base Template Explanation}
 The base template, \texttt{base.html}, defines the overall structure of the site. 
